--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,11 +1,25 @@
 <h1>Reveitas</h1>
-<ul>
-    <% @recipes.each do |recipe| %>
-    <li>
-        <%=recipe.name%>
-        <%=recipe.stuff%>
-        <%=recipe.calories%>
-    </li>
-    <%end%>
-</ul>
 
+<% @recipes.each do |recipe| %>
+<article>
+    <header>
+        <h2><%=recipe.name%></h2>
+    </header>
+    <p>
+        <%=recipe.stuff%>
+    </p>
+    <p>
+        <%=recipe.calories%>
+    </p>
+    <table>
+        <tr>
+            <th>Modo de preparo: </th>
+            <td><%= recipe.prepare_mode %>
+        </tr>
+        <th>Custo do prato:</th>
+        <td> <%=number_to_currency(recipe.cost)%> </td>
+        </tr>
+    </table>
+</article>
+
+<%end%>
