--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -13,7 +13,7 @@
     </p>
     <p>
         <%= f.label :Modo_de_preparo, "Modo de preparo" %></br>
-        <%= f.text_area :prepare_mode %>
+        <%= f.text_area :prepare_mode, cols:20, rows: 5 %>
     </p>
     <p>
         <%= f.label :Custo %></br>
