--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,25 +1,3 @@
-<%= form_for(@recipe) do |f| %>
-    <p>
-        <%= f.label :Nome, "Nome" %></br>
-        <%= f.text_field :name %>
-    </p>
-    <p>
-        <%= f.label :Ingredientes, "Ingredientes" %></br>
-        <%= f.text_area :stuff, cols:20, rows: 5 %>
-    </p>
-    <p>
-        <%= f.label :Calorias %></br>
-        <%= f.number_field :calories %>
-    </p>
-    <p>
-        <%= f.label :Modo_de_preparo, "Modo de preparo" %></br>
-        <%= f.text_area :prepare_mode, cols:20, rows: 5 %>
-    </p>
-    <p>
-        <%= f.label :Custo %></br>
-        <%= f.number_field :cost %>
-    </p>
-    <p>
-        <%= f.submit  %>
-    </p>
-<%end%>
+<h1> Criando Nova Receita </h1>
+
+<%= render 'form' %>
