--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -4,12 +4,16 @@
 <article>
     <header>
         <h2><%= link_to recipe.name, recipe %></h2>
+        <%= imagem(recipe) %>
     </header>
     <p>
         <%= truncate(recipe.stuff, lenght:17, separator: ' ')%>
     </p>
     <p>
         <%= formata_caloria(recipe)%>        
+    </p>
+    <p>
+        <%= recipe.duration.to_formatted_s(:time) %>        
     </p>
     <table>
         <tr>
