--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,13 +1,26 @@
 <article>
     <header>
         <h1><%=@recipe.name %></h1>
+        <%= imagem(@recipe) %>
     </header>
+    <h2>Tipo</h2>
+    <p><%= @recipe.kind %></p>
+
     <h2>Ingredientes</h2>
     <p><%= @recipe.stuff %></p>
+
     <h2>Calorias</h2>
     <p><%= @recipe.calories %></p>
+
     <h3> Modo de preparo</h3>
     <p><%= @recipe.prepare_mode%></p>
+
+    <h3> Tempo de preparo</h3>
+    <p><%= @recipe.duration.to_formatted_s(:time)%></p>
+    
+    <h3> Porções</h3>
+    <p><%= pluralize(@recipe.portion,'porção','porções')%></p>
+
     <h3>Custo</h3>
     <p><%= @recipe.cost %></p>
 </article>
